--- a/dev-connector/client/src/App.css
+++ b/dev-connector/client/src/App.css
@@ -3,7 +3,7 @@
   --primary-color: #17a2b8;
   --dark-color: #343a40;
   --light-color: #f4f4f4;
-  --danger-color: #dc3545;
+  --danger-color: #da6e79;
   --success-color: #28a745;
 }
 
